deploy/blue/deployment-blue.yml
---
apiVersion: v1
kind: Service
metadata:
  name: oan-stake-dashboard-api-service-blue
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    name: oan-stake-dashboard-api-blue
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oan-stake-dashboard-api-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      name: oan-stake-dashboard-api-blue
  template:
    metadata:
      labels:
        name: oan-stake-dashboard-api-blue
    spec:
      containers:
        - name: application
          image: bloxbean/oan-stake-dashboard-api:0.35
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
